# FundLens

./: .env.example  .gitignore  LICENSE.md  README.md  environment.yml  planning.md  pyproject.toml
.github/workflows/: ci.yml  daily_update.yml
config/: funds.yaml  settings.py
fundlens/: __init__.py
fundlens/analysis/: correlations.py  drawdown.py  regimes.py
fundlens/dashboard/: _data.py  app.py
fundlens/dashboard/pages/: 00_about.py  01_overview.py  02_fund_detail.py  03_correlations.py  04_predictions.py  05_drawdown.py
fundlens/ingestion/: base.py  tiingo_source.py  yfinance_source.py
fundlens/models/: __init__.py  arima_model.py  base_model.py  comparison.py  ets_model.py  garch_model.py  linear_model.py  lstm_model.py  prophet_model.py  tree_models.py
fundlens/pipeline/: daily_update.py  scheduler.py
fundlens/processing/: features.py  returns.py  volatility.py
fundlens/storage/: database.py  models.py  repository.py
notebooks/: 01_eda_inicial.ipynb  02_arima_exploration.ipynb  03_prophet_exploration.ipynb
scripts/: backfill.py  backfill_isin.py  initial_load.py
tests/: conftest.py  test_ingestion.py  test_models.py  test_pipeline.py  test_processing.py  test_storage.py
