[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fundlens"
version = "0.1.0"
description = "Automated NAV pipeline with predictive model comparison"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "duckdb>=0.10",
    "duckdb-engine>=0.13",
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "streamlit>=1.35",
    "plotly>=5.20",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "scikit-learn>=1.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "nbformat>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fundlens*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fundlens --cov-report=term-missing -v"

[tool.coverage.run]
source = ["fundlens"]
omit = ["tests/*", "scripts/*", "notebooks/*"]
