[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundlens"
version = "0.1.0"
description = "Automated NAV pipeline with predictive model comparison"
requires-python = ">=3.11"
dependencies = [
    # Data ingestion
    "yfinance>=0.2",
    "requests>=2.31",
    # Storage
    "duckdb>=0.10",
    "duckdb-engine>=0.13",
    "sqlalchemy>=2.0",
    # Processing
    "pandas>=2.0",
    "numpy>=1.26",
    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.20",
    "jinja2>=3.1",
    # Config / infra
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Lightweight forecasting models — fits Render's free tier (~512MB RAM).
ml-light = [
    "statsmodels>=0.14",
    "prophet>=1.1",
    "scikit-learn>=1.4",
    "arch>=6.0",
]
# Full model suite incl. torch/xgboost (~1GB+) — local/dev only, too heavy for free hosting.
ml = [
    "fundlens[ml-light]",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "torch>=2.3",
]
# PostgreSQL — swap in when deploying to Neon / any cloud PG
postgres = [
    "psycopg2-binary>=2.9",
]
# Local development and testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "nbformat>=5.0",
]
# Full local install (everything)
all = [
    "fundlens[ml,postgres,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fundlens*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fundlens --cov-report=term-missing -v"

[tool.coverage.run]
source = ["fundlens"]
omit = ["tests/*", "scripts/*", "notebooks/*"]
